--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "@wordpress/element": "^4.0.4",
-    "@wordpress/scripts": "^6.2.0"
+    "@wordpress/scripts": "^6.2.0",
+    "classnames": "^2.3.1"
   },
   "dependencies": {
     "abab": "^2.0.5",
